# example-flask

./: Dockerfile  LICENSE  Makefile  pyproject.toml
.github/workflows/: docker-publish.yml
example-flask/: app.py
helm/example-flask/: Chart.yaml  values.yaml
helm/example-flask/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
